# pgl

./: LICENSE  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  pylint.yml
cmd/: pgl.py  root.py
internal/: config.py  lab.py
utils/: display.py  prompt.py
